[package]
name = "ux-barcode"
version = "0.1.1"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/ux-barcode"
repository = "https://github.com/angular-rust/ux-barcode"
documentation = "https://docs.rs/ux-barcode"
description = "High-quality Barcode and QR Code generator library for Angular Rust"
keywords = ["qr-code", "qr", "barcode", "encoder", "image"]
categories = ["command-line-utilities", "encoding", "multimedia::images", "visualization"]
edition = "2018"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "barcode"

[features]
web = ["wasm-bindgen", "wasm-bindgen-futures", "wasm-logger", "gloo", "js-sys", "wasm-bindgen-test", "web-sys"]
cairo = ["cairo-rs"]

[dependencies]
log = "0.4"
lazy_static = "1.4"
html-escape = "0.2"
ux-dataflow = "0.1"
ux-animate = "0.1"
cairo-rs = { version = "0.9", optional = true }

wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-logger = { version = "0.2", optional = true }
gloo = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-test = { version = "0.3", optional = true }

[dependencies.ux-primitives]
version = "0.1"
features = [ "canvas" ]

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "KeyboardEvent",
  "ValidityState",
  "CustomEvent",
  "Node",
  "Element",
  "HtmlElement",
  "Window",
  "Document",
  "CanvasRenderingContext2d",
  "TextMetrics",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "SvgImageElement",
  "HtmlVideoElement",
  "ImageBitmap",
  "CanvasWindingRule",
  "Path2d",
  "CanvasPattern",
  "CanvasGradient",
  "HitRegionOptions",
  "ImageData",
  "DomMatrix"
]

[dev-dependencies]
slash-formatter = "3"
tiny-skia = "0.5"
resvg = "0.14.0"
usvg = "0.14.0"

[build-dependencies]

[package.metadata.docs.rs]
all-features = true